# flappy-bird-ai-NEAT

./: .gitmodules  README.md  pyproject.toml
flappy_bird_ai/: main.py  player.py  settings.py  simulator.py
flappy_bird_ai/playback/: custom_cycle.py  playback.py  playback_pipes.py
